<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topbg"
        android:background="@color/relative_bg"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0E0E0E"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:text="@string/covid_19"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold">

                </TextView>

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/country_code_drawble"
                    android:padding="1dp"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_showFullName="false"
                    app:ccp_showPhoneCode="false"
                    app:ccp_textSize="18sp"></com.hbb20.CountryCodePicker>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <org.eazegraph.lib.charts.PieChart
                    android:layout_width="220dp"
                    android:layout_height="180dp"
                    android:id="@+id/piechart"
                    android:padding="8dp"
                    app:egUsePieRotation="true"
                    app:egValueTextSize="20sp"
                    app:egLegendTextSize="8sp">

                </org.eazegraph.lib.charts.PieChart>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    // Active, Recovered, Total, Deaths Layouts

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:orientation="horizontal">


                        <View
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:background="@drawable/view_drawble"
                            android:backgroundTint="@color/green">

                        </View>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/active"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:layout_marginLeft="10dp"
                            android:layout_gravity="center">

                        </TextView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">


                        <View
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:background="@drawable/view_drawble"
                            android:backgroundTint="@color/blue">


                        </View>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recovered"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:layout_marginLeft="10dp"
                            android:layout_gravity="center">

                        </TextView>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">


                        <View
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:background="@drawable/view_drawble"
                            android:backgroundTint="@color/yellow">


                        </View>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:layout_marginLeft="10dp"
                            android:layout_gravity="center">

                        </TextView>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">


                        <View
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:background="@drawable/view_drawble"
                            android:backgroundTint="@color/red">


                        </View>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deaths"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:layout_marginLeft="10dp"
                            android:layout_gravity="center">

                        </TextView>




                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>








</RelativeLayout>